--- a/public/analytics.html
+++ b/public/analytics.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html ng-app="umeran">
-  <head>
+
+<head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <div ng-controller="umeranController">
-      <p><label>Number of visits in past 24 hours: {{data.records.length}}</label><span></span></p>
-      <p><label>Number of visits total: {{data.total}}</label><span></span></p>
-      <div>
-          <label>Sample document: </label>
-          <pre ng-bind="data.records | sampleRecordsJsonPrettyPrint"></pre>
-      </div>
-    </div>
-    <script src="/js/analytics.js"></script>
-  </body>
+        <p>
+            <label>Number of visits in past 24 hours: {{masterData.records.length}}</label>
+        </p>
+        <p>
+            <label>Number of visits total: {{masterData.total}}</label>
+        </p>
+        <div ng-controller="umeranChartController" style="max-width: 640px;">
+            <p>totalVisitsHours</p>
+            <canvas class="chart chart-line" chart-data="charts.totalVisitsHours.values" chart-labels="charts.totalVisitsHours.labels">
+            </canvas>
+            <p>totalVisitsDates</p>
+            <canvas class="chart chart-line" chart-data="charts.totalVisitsDates.values" chart-labels="charts.totalVisitsDates.labels">
+            </canvas>
+            <p>totalVisitsBrowsers</p>
+            <canvas class="chart chart-bar" chart-data="charts.totalVisitsBrowsers.values" chart-labels="charts.totalVisitsBrowsers.labels">
+            </canvas>
+            <p>totalVisitsPlatforms</p>
+            <canvas class="chart chart-bar" chart-data="charts.totalVisitsPlatforms.values" chart-labels="charts.totalVisitsPlatforms.labels">
+            </canvas>
+            <div>
+                <label>Sample documents: </label>
+                <pre ng-bind="masterData.records | sampleRecordsJsonPrettyPrint"></pre>
+            </div>
+        </div>
+        <script src="/js/underscore-min.js"></script>
+        <script src="/js/Chart.min.js"></script>
+        <script src="/js/angular-chart.min.js"></script>
+        <script src="/js/useragent.js"></script>
+        <script src="/js/analytics.js"></script>
+</body>
+
 </html>
