fix missing div close tag

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -31,11 +31,12 @@
                 <pre ng-bind="masterData.records | sampleRecordsJsonPrettyPrint"></pre>
             </div>
         </div>
-        <script src="/js/underscore-min.js"></script>
-        <script src="/js/Chart.min.js"></script>
-        <script src="/js/angular-chart.min.js"></script>
-        <script src="/js/useragent.js"></script>
-        <script src="/js/analytics.js"></script>
+    </div>
+    <script src="/js/underscore-min.js"></script>
+    <script src="/js/Chart.min.js"></script>
+    <script src="/js/angular-chart.min.js"></script>
+    <script src="/js/useragent.js"></script>
+    <script src="/js/analytics.js"></script>
 </body>
 
 </html>
