add polyfill for legacy browsers

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -32,6 +32,7 @@
             </div>
         </div>
     </div>
+    <script src="/js/polyfill.min.js"></script>
     <script src="/js/underscore-min.js"></script>
     <script src="/js/Chart.min.js"></script>
     <script src="/js/angular-chart.min.js"></script>
