--- a/public/analytics.html
+++ b/public/analytics.html
@@ -35,6 +35,7 @@
     <script src="/js/Chart.min.js"></script>
     <script src="/js/angular-chart.min.js"></script>
     <script src="/js/useragent.js"></script>
-    <script src="/js/analytics.js"></script>
+    <script src="/js/umeran.main.js"></script>
+    <script src="/js/umeran.chartDataProcessor.js"></script>
 </body>
 </html>
